--- a/scss/sheets/_npc-sheet.scss
+++ b/scss/sheets/_npc-sheet.scss
@@ -1,9 +1,8 @@
-
-
 & {
-	border-radius: 25px;
-	border-top-right-radius: 0;
-	overflow: hidden;
+
+	.window-header {
+		border-top-left-radius: 25px;
+	}
 
 	.window-content {
 
@@ -13,130 +12,151 @@
 			--sheet-top-height: #{calculate-sum($heights)};
 			--sheet-mid-height: 0px;
 
-			.tag-entry { display: none }
+			// .comp-tags { display: none }
 
-			.sheet-img { left: 0 }
+			.sheet-img {
+				left: 0
+			}
+
 			.sheet-root {
 				section.sheet-top {
 
-						grid-template-areas:
-							". . title title title title title title"
-							". . . subtitle subtitle subtitle subtitle subtitle"
-							". short-desc short-desc short-desc short-desc short-desc short-desc short-desc"
-							". . traits traits traits traits traits traits"
-							". district district district faction faction faction faction";
+					grid-template-areas:
+						". . title title title title title title"
+						". . . subtitle subtitle subtitle subtitle subtitle"
+						". short-desc short-desc short-desc short-desc short-desc short-desc short-desc"
+						". . traits traits traits traits traits traits"
+						". district district district faction faction faction faction";
 
 
-						grid-template-rows: join($heights, " ");
-						height: calculate-sum($heights);
+					grid-template-rows: join($heights, " ");
+					height: calculate-sum($heights);
 
 
-						.comp-name {
-							--sheet-title-font-size: #{toRem(38px)};
-						}
+					.comp-name {
+						--sheet-title-font-size: #{toRem(38px)};
+					}
 
-						.comp-traits {
-							grid-area: traits;
-							display: flex;
-							font-family: var(--font-emphasis);
-							// top: 0px;
-							input {
-								text-transform: uppercase;
-								text-align: center;
-								color: var(--blades-gold);
-							}
-						}
+					.comp-traits {
+						grid-area: traits;
+						display: flex;
+						font-family: var(--font-emphasis);
 
-						.comp-faction, .comp-district {
+						// top: 0px;
+						input {
+							text-transform: uppercase;
 							text-align: center;
-
-							label {
-								text-align: center;
-							}
-
-							&.comp-district { grid-area: district }
-							&.comp-faction {grid-area: faction }
+							color: var(--blades-gold);
 						}
+					}
 
-						.comp-short-description {
-							grid-area: short-desc;
-							font-style: italic;
+					.comp-faction,
+					.comp-district {
+						text-align: center;
+
+						label {
 							text-align: center;
-							color: var(--blades-white);
-							padding: 0;
 						}
 
+						&.comp-district {
+							grid-area: district
+						}
+
+						&.comp-faction {
+							grid-area: faction
+						}
+					}
+
+					.comp-short-description {
+						grid-area: short-desc;
+						font-style: italic;
+						text-align: center;
+						color: var(--blades-white);
+						padding: 0;
 					}
 
 				}
-
-				section.tab-content {
-					.tab.randomizer {
-						height: 100%;
-						padding: 0 10px;
-						.button-icon {
-							i { }
-							.tooltip {
-								bottom: 0px;
-							}
-						}
-						.randomizer {
-							display: flex;
-							flex-direction: row;
-							flex-wrap: wrap;
-							gap: 0px 10px;
-
-							.comp-randomizer-field {
-								display: flex;
-								flex-direction: row;
-								flex-wrap: nowrap;
-								flex-grow: 1;
-
-								&.field-size-05 {
-									flex-basis: 10%;
-									input {
-										text-indent: 0;
-										text-transform: uppercase;
-										text-align: center;
-										color: var(--blades-gold);
-									}
-								}
-
-								&.field-size-1 {
-									flex-basis: 20%;
-								}
-								&.field-size-2 {
-									flex-basis: 40%;
-
-								}
-								&.field-size-4 {
-									flex-basis: 80%;
-								}
-								&:first-of-type {
-									margin-right: 40px;
-								}
-
-								.toggle-icon.toggled ~ .randomizer-input {
-									background: var(--blades-grey);
-								}
-
-								label {
-									color: var(--blades-grey);
-									margin-right: 5px
-								}
-								.randomizer-input {
-									font-family: Oswald;
-									font-size: toRem(12px);
-									text-indent: 5px;
-
-								}
-							}
-						}
-					}
-				}
-
 
 			}
+
+			section.tab-content {
+				.tab.randomizer {
+					height: 100%;
+					padding: 0 10px;
+
+					.button-icon {
+						i {}
+
+						.tooltip {
+							bottom: 0px;
+						}
+					}
+
+					.randomizer {
+						display: flex;
+						flex-direction: row;
+						flex-wrap: wrap;
+						gap: 0px 10px;
+
+						.comp-randomizer-field {
+							display: flex;
+							flex-direction: row;
+							flex-wrap: nowrap;
+							flex-grow: 1;
+
+							&.field-size-05 {
+								flex-basis: 10%;
+
+								input {
+									text-indent: 0;
+									text-transform: uppercase;
+									text-align: center;
+									color: var(--blades-gold);
+								}
+							}
+
+							&.field-size-1 {
+								flex-basis: 20%;
+							}
+
+							&.field-size-2 {
+								flex-basis: 40%;
+
+							}
+
+							&.field-size-4 {
+								flex-basis: 80%;
+							}
+
+							&:first-of-type {
+								margin-right: 40px;
+							}
+
+							.toggle-icon.toggled~.randomizer-input {
+								background: var(--blades-grey);
+							}
+
+							label {
+								color: var(--blades-grey);
+								margin-right: 5px
+							}
+
+							.randomizer-input {
+								font-family: Oswald;
+								font-size: toRem(12px);
+								text-indent: 5px;
+
+							}
+						}
+					}
+				}
+			}
+
+
 		}
-	.window-resizable-handle { display: none }
+	}
+
+	.window-resizable-handle {
+		display: none
+	}
 }
