--- a/templates/items/faction-tracker-sheet.hbs
+++ b/templates/items/faction-tracker-sheet.hbs
@@ -2,7 +2,7 @@
   <div class="sheet-root">
 
     {{#if isGM}}
-    <input type="text" class="tag-entry" />
+    <input type="text" class="comp-tags tags-gm" />
     {{/if}}
   <section id="factions" class="flex-horizontal">
 	<div id="factions-section" class="flex-vertical grow-two">
