--- a/templates/items/playbook-sheet.hbs
+++ b/templates/items/playbook-sheet.hbs
@@ -3,7 +3,7 @@
   <div class="sheet-root">
 
     {{#if isGM}}
-    <input type="text" class="tag-entry" />
+    <input type="text" class="comp-tags tags-gm" />
     {{/if}}
 
 	<section class="sheet-top">
