--- a/scss/core/_vars.scss
+++ b/scss/core/_vars.scss
@@ -1,6 +1,7 @@
 $isCompactLayout: true;
 
 & {
+
 	--clock-glow-size: 50px;
 	--clock-frame-size: 50px;
 	--clock-glow-correction: -175px;
@@ -307,8 +308,8 @@ $isCompactLayout: true;
 	--margin-input: 0;
 	--padding-input: 0;
 
-	--font-input: var(--font-emphasis);
-	--font-number-input: var(--font-input);
+	--font-input: var(--font-primary);
+	--font-number-input: var(--font-emphasis);
 
 	--font-size-input: var(--font-size-primary);
 	--font-weight-input: var(--font-weight-primary);
