--- a/templates/items/crew_upgrade-sheet.hbs
+++ b/templates/items/crew_upgrade-sheet.hbs
@@ -2,7 +2,7 @@
   <div class="sheet-root">
 
     {{#if isGM}}
-    <input type="text" class="tag-entry" />
+    <input type="text" class="comp-tags tags-gm" />
     {{/if}}
 	<section class="sheet-top">
 		<img class="sheet-img" src="{{item.img}}" data-edit="img" title="{{item.name}}" />
